--- a/HelloWorldApp/app/src/main/res/layout/activity_main.xml
+++ b/HelloWorldApp/app/src/main/res/layout/activity_main.xml
@@ -55,5 +55,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/closestText" />
 
+        <Button
+            android:id="@+id/nextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="nextButtonFunc"
+            android:text="Next"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/image2" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
